--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="site.css">
+
   </head>
 
   <body>
@@ -23,16 +26,33 @@
 
       <div class="jumbotron">
         <h1>The dotCPH initiative</h1>
-        <p class="lead">The dotCPH initiative to buy and secure the .CPH gTLD, to represent the danish city Copenhagen.</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Show your interest</a></p>
+        <p class="lead">The dotCPH initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen.</p>
 
-        <div class="fb-like" data-href="https://dotcph.org" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+        <br />
+
+        <p>
+            <a class="btn btn-lg btn-success" target="_blank" href="http://eepurl.com/-ys0L" role="button">Show your interest</a>
+
+            <div class="fb-like" data-href="https://dotcph.org" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+        </p>
+
+        <br />
+
+        <h2>How to make to happen?</h2>
+        <p>The first step is to collect interest. So if you are interested in making the .CPH gTLD reality, please subscribe to the newsletter, and help us share this message on Facebook and Twitter.</p>
+
+        <p>If you are a company or organization who are interested in moving this initiative forward, please get in touch with <a href="mailto:kenneth@auchenberg.dk">Kenneth Auchenberg.</a></p>
+
+        <h2>Who's supporting this initiative?</h2>
+
+<blockquote class="twitter-tweet" data-conversation="none" lang="en"><p><a href="https://twitter.com/auchenberg">@auchenberg</a> vi er med, 100%</p>&mdash; GratisDNS.dk (@gratisdns) <a href="https://twitter.com/gratisdns/status/541899252688252928">December 8, 2014</a></blockquote>
 
       </div>
 
     </div> <!-- /container -->
 
 
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
