--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="The dotCPH initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen.">
     <meta name="author" content="">
+
+    <meta property="og:title" content="dotCPH initiative"/>
+    <meta property="og:site_name" content="dotCPH initiative"/>
+    <meta property="og:description" content="The dotCPH initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen." />
+
     <title>dotCPH initiative</title>
 
     <!-- Latest compiled and minified CSS -->
