--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <h1>The dotCPH initiative</h1>
         <p class="lead">The dotCPH initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen.</p>
 
+        <p>Many major european cities has gotten their own gTLD, like <a href="http://www.nic.berlin/">.berlin</a>, <a href="http://bienvenue.paris/?">.paris</a> and <a href="http://www.dotlondondomains.london/">.london</a> but Copenhagen is missing out.</p>
+        <p>We should change this.</p>
+
         <br />
 
         <p>
@@ -49,6 +52,7 @@
         <p>If you are a company or organization who are interested in moving this initiative forward, please get in touch with <a href="mailto:kenneth@auchenberg.dk">Kenneth Auchenberg.</a></p>
 
         <h2>Who's supporting this initiative?</h2>
+        <br />
 
 <blockquote class="twitter-tweet" data-conversation="none" lang="en"><p><a href="https://twitter.com/auchenberg">@auchenberg</a> vi er med, 100%</p>&mdash; GratisDNS.dk (@gratisdns) <a href="https://twitter.com/gratisdns/status/541899252688252928">December 8, 2014</a></blockquote>
 
