--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
 
         <p>If you are a company or organization who are interested in moving this initiative forward, please get in touch with <a href="mailto:kenneth@auchenberg.dk">Kenneth Auchenberg.</a></p>
 
+        <br />
+
+        <h2>Who's behind?</h2>
+        <p>The initiative was started by <a href="https://kenneth.io">Kenneth Auchenberg</a> on December 8 2014, <a href="https://twitter.com/auchenberg/status/541896431091863552">on Twitter</a>.</p>
+
+        <br />
+
         <h2>Who's supporting this initiative?</h2>
         <br />
 
