--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="The dotCPH initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen.">
+    <meta name="description" content="dotCPH, an initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen.">
     <meta name="author" content="">
 
     <meta property="og:title" content="dotCPH initiative"/>
     <meta property="og:site_name" content="dotCPH initiative"/>
-    <meta property="og:description" content="The dotCPH initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen." />
+    <meta property="og:description" content="dotCPH - an initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen" />
 
-    <title>dotCPH initiative</title>
+    <title>dotCPH - an initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -30,8 +29,8 @@
     <div class="container">
 
       <div class="jumbotron">
-        <h1>The dotCPH initiative</h1>
-        <p class="lead">The dotCPH initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen.</p>
+        <h1>dotCPH</h1>
+        <p class="lead">dotCPH is an initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen.</p>
 
         <p>Many major european cities has gotten their own gTLD, like <a href="http://www.nic.berlin/">.berlin</a>, <a href="http://bienvenue.paris/?">.paris</a> and <a href="http://www.dotlondondomains.london/">.london</a> but Copenhagen is missing out.</p>
         <p>We should change this.</p>
@@ -40,7 +39,6 @@
 
         <p>
             <a class="btn btn-lg btn-success" target="_blank" href="http://eepurl.com/-ys0L" role="button">Show your interest</a>
-
             <div class="fb-like" data-href="https://dotcph.org" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
         </p>
 
@@ -61,23 +59,23 @@
         <h2>Who's supporting this initiative?</h2>
         <br />
 
-<blockquote class="twitter-tweet" data-conversation="none" lang="en"><p><a href="https://twitter.com/auchenberg">@auchenberg</a> vi er med, 100%</p>&mdash; GratisDNS.dk (@gratisdns) <a href="https://twitter.com/gratisdns/status/541899252688252928">December 8, 2014</a></blockquote>
+        <blockquote class="twitter-tweet" data-conversation="none" lang="en"><p><a href="https://twitter.com/auchenberg">@auchenberg</a> vi er med, 100%</p>&mdash; GratisDNS.dk (@gratisdns) <a href="https://twitter.com/gratisdns/status/541899252688252928">December 8, 2014</a></blockquote>
 
       </div>
 
-    </div> <!-- /container -->
+    </div>
 
-
-<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=1446496292269350&version=v2.0";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <div id="fb-root"></div>
+    <script>
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=1446496292269350&version=v2.0";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
 
   </body>
 </html>
