--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <br />
 
-        <h2>How to make to happen?</h2>
+        <h2>How to make it happen?</h2>
         <p>The first step is to collect interest. So if you are interested in making the .CPH gTLD reality, please subscribe to the newsletter, and help us share this message on Facebook and Twitter.</p>
 
         <p>If you are a company or organization who are interested in moving this initiative forward, please get in touch with <a href="mailto:kenneth@auchenberg.dk">Kenneth Auchenberg.</a></p>
