Added Surftown tweet

--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
         <h2>Who's supporting this initiative?</h2>
         <br />
 
-        <blockquote class="twitter-tweet" data-conversation="none" lang="en"><p><a href="https://twitter.com/auchenberg">@auchenberg</a> vi er med, 100%</p>&mdash; GratisDNS.dk (@gratisdns) <a href="https://twitter.com/gratisdns/status/541899252688252928">December 8, 2014</a></blockquote>
+        <blockquote class="twitter-tweet" data-conversation="none" lang="en">
+            <p><a href="https://twitter.com/auchenberg">@auchenberg</a> vi er med, 100%</p>&mdash; GratisDNS.dk (@gratisdns) <a href="https://twitter.com/gratisdns/status/541899252688252928">December 8, 2014</a>
+        </blockquote>
+
+        <blockquote class="twitter-tweet" data-conversation="none" lang="en">
+            <p><a href="https://twitter.com/auchenberg">@auchenberg</a> Vi er med jer. Lad os se på det. :-) ^NN</p>&mdash; Surftown (@Surftown) <a href="https://twitter.com/Surftown/status/544279547416686592">December 14, 2014</a>
+        </blockquote>
 
       </div>
 
