tweaks to social media buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
 
         <header>
-            <div class="statement anim-activated">
+            <div class="statement">
                 <h1>dot<strong>CPH</strong></h1>
                 <p>dotCPH is an initiative to buy and secure the <strong>CPH gTLD</strong> to represent the danish city Copenhagen on the world wide web, also known as the internet.</p>
 
@@ -64,9 +64,10 @@
 
                 <p>if you are interested in making the .CPH gTLD reality, please subscribe to the newsletter, and help us share this message on social media like Facebook and Twitter.</p>
 
-                <div class="fb-like" data-href="https://dotcph.org" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
-
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://dotcph.org" data-text="dotCPH is an initiative to buy and secure the CPH gTLD to represent the danish city Copenhagen on the world wide web, also known as the internet." data-via="auchenberg">Tweet</a>
+                <div class="social">
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://dotcph.org" data-text="dotCPH is an initiative to buy and secure the CPH gTLD to represent the danish city Copenhagen on the internet." data-via="auchenberg">Tweet</a>
+                    <div class="fb-like" data-href="https://dotcph.org" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" data-width="300"></div>
+                </div>
 
                 <h3>Our newsletter</h3>
                 <div class="newsletter">
@@ -98,7 +99,7 @@
                 <p>The initiative was started by <a href="https://kenneth.io">Kenneth Auchenberg</a> on December 8 2014, <a href="https://twitter.com/auchenberg/status/541896431091863552">on Twitter</a>, and is already backed several companies that want to help making <br /> the <strong>CPH gTLD</strong> reality.</p>
             </div>
             <div class="container">
-                <ul class="blocks anim-on-enter anim-activated">
+                <ul class="blocks anim-on-enter">
                     <li class="anim-slide-in anim-delay-1 one"><a href="http://one.com"><img src="images/one-com.png" alt="One"></a>
                     <li class="anim-slide-in anim-delay-2 surftown"><a href="http://surftown.com"><img src="images/surftown.png" alt="Surftown"></a>
                     <li class="anim-slide-in anim-delay-3 gratisdns"><a href="http://gratisdns.dk"><img src="images/gratisdns.png" alt="GratisDNS"></a>
