--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:title" content="dotCPH initiative"/>
         <meta property="og:site_name" content="dotCPH initiative"/>
         <meta property="og:description" content="dotCPH - an initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen" />
-        <link rel="stylesheet" href="site.css">
+        <link rel="stylesheet" href="site_jan7.css">
     </head>
 
     <body>
