--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta property="og:title" content="dotCPH initiative"/>
         <meta property="og:site_name" content="dotCPH initiative"/>
         <meta property="og:description" content="dotCPH - an initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen" />
+        <meta property="og:image" content="https://dotcph.org/images/cph.jpg" />
         <link rel="stylesheet" href="site_jan7.css">
     </head>
 
@@ -80,10 +81,6 @@
                         <input type="submit" value="Subscribe" name="subscribe" class="button">
                     </form>
                 </div>
-
-
-
-</div>
             </div>
         </section>
 
