--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <section class="help section-alt">
             <div class="container container-sm">
-                <h2>Help making it happen</h2>
+                <h2>Let's make it happen</h2>
 
                 <p>We are currently gathering an overview of the collective interest in the <strong>CPH gTLD</strong>, by reaching out to companies, organizations and other stakeholders. </p>
 
