Word tweaks and new social image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:title" content="dotCPH initiative"/>
         <meta property="og:site_name" content="dotCPH initiative"/>
         <meta property="og:description" content="dotCPH - an initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen" />
-        <meta property="og:image" content="https://dotcph.org/images/cph.jpg" />
+        <meta property="og:image" content="https://dotcph.org/images/social.png" />
         <link rel="stylesheet" href="site_jan7.css">
     </head>
 
@@ -18,8 +18,8 @@
 
         <header>
             <div class="statement">
-                <h1>dot<strong>CPH</strong></h1>
-                <p>dotCPH is an initiative to buy and secure the <strong>CPH gTLD</strong> to represent the danish city Copenhagen on the world wide web, also known as the internet.</p>
+                <h1>dot<strong>cph</strong></h1>
+                <p>dot<strong>cph</strong> is an initiative to buy and secure the <strong>cph gTLD</strong> to represent the danish city Copenhagen on the world wide web, also known as the internet.</p>
 
                 <div class="social">
                     <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://dotcph.org" data-text="dotCPH is an initiative to buy and secure the CPH gTLD to represent the danish city Copenhagen on the internet." data-via="auchenberg">Tweet</a>
@@ -40,9 +40,9 @@
             <div class="container">
 
                 <p>Back in 2008, the organization managing the global domain system, ICANN, decided to open the internet up for a new breed of global top level domains, also known as gTLDs.<p>
-                <p>These gTLDs are the next generation of internet domains that will be used by the worlds population to access the future generation of websites and applications.</p>
+                <p>These gTLDs are the next generation of domains that will be used by the worlds population to access the future generation of websites and applications on the internet.</p>
 
-                <p>Today many oher major european cities has gotten their own gTLD, like <a href="http://www.nic.berlin/">.berlin</a>, <a href="http://bienvenue.paris/?">.paris</a> and <a href="http://www.dotlondondomains.london/">.london</a>, which, among many things, are used to create awareness and closer relations between the cities and the owners of the domains, but Copenhagen is missing out.
+                <p>Today many oher european cities have gotten their own gTLD, like <a href="http://www.nic.berlin/">.berlin</a>, <a href="http://bienvenue.paris/?">.paris</a> and <a href="http://www.dotlondondomains.london/">.london</a>, which, among many things, are used to create a close relationship between the cities and the owners of the domains, but right now Copenhagen is missing out.
 
                 <p>We should change this.</p>
 
@@ -52,7 +52,7 @@
                     </div>
                 </div>
 
-                <p>Copenhagen has a vibraint creative culture, a strong and well-known design tradition, and a flourishing tech startup scene, so all the right elements are in place for us to buy and secure the .CPH gTLD, <br />  but we need your help.        
+                <p>Copenhagen has a vibraint creative culture, a strong and well-known design tradition, and a flourishing tech startup scene, so all the right elements are in place for us to buy and secure the <strong>cph gTLD</strong>, <br />  but we need your help.        
 
             </div>
         </section>
@@ -61,12 +61,12 @@
             <div class="container container-sm">
                 <h2>Let's make it happen</h2>
 
-                <p>We are currently gathering an overview of the collective interest in the <strong>CPH gTLD</strong>, by reaching out to companies, organizations and other stakeholders. </p>
+                <p>We are currently gathering an overview of the collective interest in the <strong>cph gTLD</strong>, by reaching out to companies, organizations and other stakeholders. </p>
 
-                <p>if you are interested in making the .CPH gTLD reality, please subscribe to the newsletter, and help us share this message on social media like Facebook and Twitter.</p>
+                <p>if you are interested in making the <strong>cph gTLD</strong> reality, please subscribe to the newsletter, and help us share this message on social media like Facebook and Twitter, as we need to build momentum amoung companies, organizations and the city of Copenhagen, to make it happen.</p>
 
                 <div class="social">
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://dotcph.org" data-text="dotCPH is an initiative to buy and secure the CPH gTLD to represent the danish city Copenhagen on the internet." data-via="auchenberg">Tweet</a>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://dotcph.org" data-text="dotCPH is an initiative to buy and secure the cph gTLD to represent the danish city Copenhagen on the internet." data-via="auchenberg">Tweet</a>
                     <div class="fb-like" data-href="https://dotcph.org" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" data-width="300"></div>
                 </div>
 
@@ -86,14 +86,14 @@
 
         <section class="info">
             <div class="container container-sm">
-              <p>dotCPH is an initiative to buy and secure the <strong>CPH gTLD</strong> to represent the danish city Copenhagen on the world wide web, also known as the internet.</p>
+              <p>dot<strong>cph</strong> is an initiative to buy and secure the <strong>cph gTLD</strong> to represent the danish city Copenhagen on the world wide web, also known as the internet.</p>
             </div>
         </section>
 
         <section class="behind section-alt">
             <div class="container container-sm">
                 <h2>Who's behind?</h2>
-                <p>The initiative was started by <a href="https://kenneth.io">Kenneth Auchenberg</a> on December 8 2014, <a href="https://twitter.com/auchenberg/status/541896431091863552">on Twitter</a>, and is already backed several companies that want to help making <br /> the <strong>CPH gTLD</strong> reality.</p>
+                <p>The initiative was started by <a href="https://kenneth.io">Kenneth Auchenberg</a> on December 8 2014, <a href="https://twitter.com/auchenberg/status/541896431091863552">on Twitter</a>, and is already backed several companies that want to help making <br /> the <strong>cph gTLD</strong> reality.</p>
             </div>
             <div class="container">
                 <ul class="blocks anim-on-enter">
