Added twitter cards metadata

--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>dotCPH - an initiative to buy and secure the CPH gTLD to represent the danish city Copenhagen on the internet.</title>
+        <title>dotcph - an initiative to buy and secure the cph gTLD to represent the danish city Copenhagen on the world wide web, also known as the internet</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="dotCPH, an initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen.">
+        <meta name="description" content="dotcph is an initiative to buy and secure the cph gTLD to represent the danish city Copenhagen on the internet">
         <meta name="author" content="Kenneth Auchenberg">
-        <meta property="og:title" content="dotCPH initiative"/>
-        <meta property="og:site_name" content="dotCPH initiative"/>
-        <meta property="og:description" content="dotCPH - an initiative to buy and secure the .CPH gTLD to represent the danish city Copenhagen" />
+        <meta property="og:title" content="dotcph initiative"/>
+        <meta property="og:site_name" content="dotcph initiative"/>
+        <meta property="og:description" content="dotcph is an initiative to buy and secure the cph gTLD to represent the danish city Copenhagen on the internet" />
         <meta property="og:image" content="https://dotcph.org/images/social.png" />
+
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:creator" content="@auchenberg">
+        <meta name="twitter:title" content="dotcph">
+        <meta name="twitter:description" content="dotcph is an initiative to buy and secure the cph gTLD to represent the danish city Copenhagen on the internet">
+        <meta name="twitter:image:src" content="https://dotcph.org/images/social.png">
+
         <link rel="stylesheet" href="site_jan7.css">
     </head>
 
@@ -22,7 +29,7 @@
                 <p>dot<strong>cph</strong> is an initiative to buy and secure the <strong>cph gTLD</strong> to represent the danish city Copenhagen on the world wide web, also known as the internet.</p>
 
                 <div class="social">
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://dotcph.org" data-text="dotCPH is an initiative to buy and secure the CPH gTLD to represent the danish city Copenhagen on the internet." data-via="auchenberg">Tweet</a>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://dotcph.org" data-text="#dotcph is an initiative to buy and secure the cph gTLD to represent the danish city Copenhagen on the internet" data-via="auchenberg">Tweet</a>
                     <div class="fb-like" data-href="https://dotcph.org" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" data-width="300"></div>
                 </div>
 
