tweaks to twitter button text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>dot<strong>cph</strong> is an initiative to buy and secure the <strong>cph gTLD</strong> to represent the danish city Copenhagen on the world wide web, also known as the internet.</p>
 
                 <div class="social">
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://dotcph.org" data-text="#dotcph is an initiative to buy and secure the cph gTLD to represent the danish city Copenhagen on the internet" data-via="auchenberg">Tweet</a>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://dotcph.org" data-text="#dotcph is an initiative to buy and secure the cph gTLD to represent the danish city Copenhagen on the internet">Tweet</a>
                     <div class="fb-like" data-href="https://dotcph.org" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" data-width="300"></div>
                 </div>
 
@@ -73,7 +73,7 @@
                 <p>if you are interested in making the <strong>cph gTLD</strong> reality, please subscribe to the newsletter, and help us share this message on social media like Facebook and Twitter, as we need to build momentum amoung companies, organizations and the city of Copenhagen, to make it happen.</p>
 
                 <div class="social">
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://dotcph.org" data-text="dotCPH is an initiative to buy and secure the cph gTLD to represent the danish city Copenhagen on the internet." data-via="auchenberg">Tweet</a>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://dotcph.org" data-text="dotCPH is an initiative to buy and secure the cph gTLD to represent the danish city Copenhagen on the internet.">Tweet</a>
                     <div class="fb-like" data-href="https://dotcph.org" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" data-width="300"></div>
                 </div>
 
