tweaks to twitter card metadata

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <meta property="og:image" content="https://dotcph.org/images/social.png" />
 
         <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@auchenberg">
         <meta name="twitter:creator" content="@auchenberg">
         <meta name="twitter:title" content="dotcph">
         <meta name="twitter:description" content="dotcph is an initiative to buy and secure the cph gTLD to represent the danish city Copenhagen on the internet">
