--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="embed-container">
                     <div>
-                        <iframe src="https://www.youtube.com/embed/24uPTlSt1o4?showinfo=0&modestbranding=1&rel=0&controls=0&fs=1&hd=1" frameborder="0" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/24uPTlSt1o4?showinfo=0&amp;modestbranding=1&amp;rel=0&amp;controls=0&amp;fs=1&amp;hd=1" allowfullscreen></iframe>
                     </div>
                 </div>
 
@@ -120,6 +120,6 @@
         <div id="fb-root"></div>
 
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <script async src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&appId=1446496292269350&version=v2.0" charset="utf-8"></script>
+        <script async src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&amp;appId=1446496292269350&amp;version=v2.0" charset="utf-8"></script>
     </body>
 </html>
