Tighten up text

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>dotcph - an initiative to buy and secure the cph gTLD to represent the danish city Copenhagen on the world wide web, also known as the internet</title>
+        <title>dotcph - we want to secure the <b>.cph</b> internet domain ending to represent Copenhagen, Denmark</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,12 +47,11 @@
         <section class="about" id="casting">
             <div class="container">
 
-                <p>Back in 2008, the organization managing the global domain system, ICANN, decided to open the internet up for a new breed of global top level domains, also known as gTLDs.<p>
-                <p>These gTLDs are the next generation of domains that will be used by the worlds population to access the future generation of websites and applications on the internet.</p>
+                <p>Back in 2008, the people who manage domain names on the internet decided everyone should be able to get not only a domain name, but also a domain name ending<p>
+                
+                <p>Today many oher European cities have gotten their own ending, like <a href="http://www.nic.berlin/">.berlin</a>, <a href="http://bienvenue.paris/?">.paris</a> and <a href="http://www.dotlondondomains.london/">.london</a>, which, among many things, are create a close relationship between the city and the website.
 
-                <p>Today many oher european cities have gotten their own gTLD, like <a href="http://www.nic.berlin/">.berlin</a>, <a href="http://bienvenue.paris/?">.paris</a> and <a href="http://www.dotlondondomains.london/">.london</a>, which, among many things, are used to create a close relationship between the cities and the owners of the domains, but right now Copenhagen is missing out.
-
-                <p>We should change this.</p>
+                <p>Copenhagen doesn't have one yet. Let's get one.</p>
 
                 <div class="embed-container">
                     <div>
@@ -60,7 +59,7 @@
                     </div>
                 </div>
 
-                <p>Copenhagen has a vibraint creative culture, a strong and well-known design tradition, and a flourishing tech startup scene, so all the right elements are in place for us to buy and secure the <strong>cph gTLD</strong>, <br>  but we need your help.
+                <p>Copenhagen has a vibraint creative culture, a strong design tradition, and a flourishing tech startup scene, so all the right elements are in place for us to buy the <strong>cph gTLD</strong>, <br>  but we need your help.
 
             </div>
         </section>
@@ -69,9 +68,9 @@
             <div class="container container-sm">
                 <h2>Let's make it happen</h2>
 
-                <p>We are currently gathering an overview of the collective interest in the <strong>cph gTLD</strong>, by reaching out to companies, organizations and other stakeholders. </p>
+                <p>We are currently gathering an overview of the collective interest in the <strong>.cph</strong> ending, by reaching out to companies, organizations and people like you. </p>
 
-                <p>If you are interested in making the <strong>cph gTLD</strong> reality, please subscribe to the newsletter, and help us share this message on social media like Facebook and Twitter, as we need to build momentum amoung companies, organizations and the city of Copenhagen, to make it happen.</p>
+                <p>If you are interested in making the <strong>cph</strong> name a reality, please subscribe to the newsletter, and help us share this message, as we need to build momentum among companies, organizations and the city of Copenhagen.</p>
 
                 <div class="social">
                     <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://dotcph.org" data-text="dotCPH is an initiative to buy and secure the cph gTLD to represent the danish city Copenhagen on the internet.">Tweet</a>
@@ -91,14 +90,14 @@
 
         <section class="info">
             <div class="container container-sm">
-              <p>dot<strong>cph</strong> is an initiative to buy and secure the <strong>cph gTLD</strong> to represent the danish city Copenhagen on the world wide web, also known as the internet.</p>
+              <p>dot<strong>cph</strong> is an initiative to buy the <strong>cph</strong> domain ending to represent Copenhagen, Denmark</p>
             </div>
         </section>
 
         <section class="behind section-alt">
             <div class="container container-sm">
                 <h2>Who's behind?</h2>
-                <p>The initiative was started by <a href="https://kenneth.io">Kenneth Auchenberg</a> on December 8 2014, <a href="https://twitter.com/auchenberg/status/541896431091863552">on Twitter</a>, and is already backed several companies that want to help making <br> the <strong>cph gTLD</strong> reality.</p>
+                <p>The initiative was started by <a href="https://kenneth.io">Kenneth Auchenberg</a> in December 2014, <a href="https://twitter.com/auchenberg/status/541896431091863552">on Twitter</a>, and is already backed by several companies that want to help making <br> the <strong>cph</strong> domain ending a reality.</p>
             </div>
             <div class="container">
                 <ul class="blocks anim-on-enter">
@@ -113,7 +112,7 @@
         <section class="get-in-touch">
             <div class="container">
                 <h2>Get in touch</h2>
-                <p>If you are an individual, company or organization who are interested in moving this initiative forward, <br>please get in touch with <a href="mailto:kenneth@auchenberg.dk">Kenneth Auchenberg.</a></p>
+                <p>We invite individuals, companies and organizations of any kind to <br>get in touch with <a href="mailto:kenneth@auchenberg.dk">Kenneth</a> today.</p>
             </div>
         </section>
 
